--- a/Lecture3/newyear/templates/newyear/index.html
+++ b/Lecture3/newyear/templates/newyear/index.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Is it New Year?</title>
+    <link rel="stylesheet" href="{% static 'newyear/style.css' %}" />
   </head>
   <body>
     {% if newyear %}
