--- a/Lecture3/todo/templates/todo/add.html
+++ b/Lecture3/todo/templates/todo/add.html
@@ -2,9 +2,10 @@
 
 {% block body %}
 <h1>Add Task:</h1>
-<form action="">
-  <input type="text" name="task" />
+<form action="{% url 'todo:add' %}" method="post">
+  {% csrf_token %}
+  {{ form }}
   <input type="submit" />
 </form>
-<a href="{% url 'index' %}">Back to Task List</a>
+<a href="{% url 'todo:index' %}">Back to Task List</a>
 {% endblock %}
