--- a/Lecture3/todo/templates/todo/index.html
+++ b/Lecture3/todo/templates/todo/index.html
@@ -7,5 +7,5 @@
   <li>{{ task }}</li>
   {% endfor %}
 </ul>
-<a href="{% url 'add' %}">Add a new Task</a>
-{% endblock %}
+<a href="{% url 'todo:add' %}">Add a new Task</a>
+{% endblock %} 
